feat(fabric): take over the 6.0.1 source tree from neoforge-1.21.X
Only 46 of the 864 java files on neoforge-1.21.X had a path twin here, so a
commit replay would have had almost nothing to merge: 818 files were going to
be created either way. What makes that affordable is the other number. Only
164 of those files import net.neoforged at all; the remaining 700 are plain
Minecraft and Java and carry over word for word.

So the tree comes over whole and the loader seam gets translated after it.
This commit is the import: 866 java files, every asset and data file, and the
77 files whose paths neoforge dropped in its package refactor removed again.
The two fabric entrypoints stay, because nothing on the neoforge side plays
their role.

The tree does not compile, and will not until the seam is done. That is what
this branch is for. The error count is the measure of what is left: 2232
across 354 files, with the biggest blocks in events, Config and network.
-Xmaxerrs keeps javac from stopping at 100 and hiding the number.

.gitattributes comes from neoforge too. Without it the imported files get
different line endings from their originals and the parity check at the end
would drown in noise.

The 79 removed files are kept outside the source set under
docs/fabric-5.2.0-reference, which is ignored. They are the only working
fabric implementation of the seam that is about to be rewritten, and one of
them already answers an open question: the lock overlay hooks seven
GuiGraphics overloads rather than going through ItemDecoratorRegistry, which
is why it also covers fake items.